src/test/ui/coherence/coherence_local.stderr
error: compilation successful
  --> $DIR/coherence_local.rs:23:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

